📟 Unrecognized VM option 'UseBiasedLocking'